--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://adventuremediaco.github.io/Snow-Wheeling-and-Recovery-Class-101/">https://adventuremediaco.github.io/Snow-Wheeling-and-Recovery-Class-101/</a><br>
+                <a target="_bLank" href="https://muleexpedition.s3.us-east-005.backblazeb2.com/Snow+Wheeling+and+Recovery+Class+101/index.html">https://muleexpedition.s3.us-east-005.backblazeb2.com/Snow+Wheeling+and+Recovery+Class+101/index.html</a><br>
+                <a target="_bLank" href="https://snow-wheeling-and-recover-git-c6229e-adventuremediacos-projects.vercel.app/">https://snow-wheeling-and-recover-git-c6229e-adventuremediacos-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://roaring-dieffenbachia-fcffdb.netlify.app/">https://roaring-dieffenbachia-fcffdb.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
